--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -1,45 +1,20 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
-<link rel="import" href="../bower_components/core-icons/av-icons.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/core-tooltip/core-tooltip.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-action-dialog.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/core-input/core-input.html">
 <link rel="import" href="cg-toolbar.html">
+<link rel="import" href="cg-inputbar.html">
 <polymer-element name="cg-app" attributes="logo">
     <template>
-        <style>
-            core-toolbar {
-                color: #ddd;
-                background: #15202f;
-                font-family: "Varela round", sans-serif;
-                border-bottom: 1px solid #ccc;
-            }
-
-            core-toolbar #text {
-                margin-left: 20px;
-                color: #ccc;
-            }
-
-            [disabled] {
-                opacity: 0.7;
-            }
-        </style>
         <cg-toolbar logo="{{logo}}" on-command="{{runCommand}}" hidden?="{{activeBar != 'tool'}}"></cg-toolbar>
+        <cg-inputbar label="Group title..." value="{{groupTitle}}" on-submit="{{createGroup}}" on-close="{{showToolbar}}" hidden?="{{activeBar != 'group'}}">
+        </cg-inputbar>
         <paper-toast id="error"></paper-toast>
-        <core-toolbar id="groupDialog" hidden?="{{activeBar != 'group'}}">
-            <input id="text" is="core-input" placeholder="Group title..." value="{{groupTitle}}" on-change="{{createGroup}}" autofocus?="{{activeBar == 'group'}}" flex>
-            <paper-icon-button on-click="{{createGroup}}" icon="check"></paper-icon-button>
-        </core-toolbar>
         <content id="renderer" select="cg-renderer"></content>
-        <!--<paper-action-dialog id="groupDialog" heading="Create a new group" transition="core-transition-top" backdrop>-->
-            <!--<paper-input autofocus value="{{groupTitle}}" label="Group title"></paper-input>-->
-            <!--<paper-button dismissive>Cancel</paper-button>-->
-            <!--<paper-button on-click="{{createGroup}}" affirmative default>Create</paper-button>-->
-        <!--</paper-action-dialog>-->
         <paper-action-dialog id="blockDialog" heading="Add a new action" transition="core-transition-top" backdrop>
             <paper-input autofocus value="{{model}}" label="Action model"></paper-input>
             <div>
