--- a/elements/cg-renderer.html
+++ b/elements/cg-renderer.html
@@ -35,6 +35,7 @@
     <script src="../lib/graph/nodes/graph.js"></script>
     <!-- CodeGraph renderer -->
     <script src="../lib/renderer/renderer.js"></script>
+    <script src="../lib/renderer/utils/renderer-d3.js"></script>
     <script src="../lib/renderer/utils/renderer-error.js"></script>
     <script src="../lib/renderer/utils/renderer-position.js"></script>
     <script src="../lib/renderer/utils/renderer-point.js"></script>
